# SoftServe-Task1-3

./: .gitignore
Task1/: CMakeLists.txt  StringList.cpp  StringList.h  main.cpp  test.cpp
Task2/: CMakeLists.txt  VariantPrimitive.cpp  VariantPrimitive.h  main.cpp  test.cpp
Task3/: CMakeLists.txt  DirectoryProcessor.cpp  DirectoryProcessor.h  main.cpp  test.cpp
